# LeapAI-Assist

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tatus
config/: config.yaml
deploy/: Containerfile  README.md  compose.yaml  install.sh  requirements-no-versions.txt  requirements.txt
deploy/cockpit/suse-ai/: manifest.json
deploy/docker/: Dockerfile  README.md  daemon.json  docker-compose.yml  suse-ai-docker.service  suse-ai-docker.socket
deploy/jeos-firstboot/: 04_ai_assistant.sh
deploy/kubernetes/: README.md  helm-values.yaml  k8s-configmap.yaml  k8s-deployment.yaml  k8s-ingress.yaml  k8s-namespace.yaml  k8s-pvc.yaml  k8s-rbac.yaml  k8s-service.yaml  kubectl-cheatsheet.md
deploy/opensuse-welcome/: INTEGRATION.md  suse-ai-tour.json  suse-ai-welcome-setup  suse-ai-welcome.desktop
deploy/packaging/: iso-integration-guide.md  obs-guide.md  suse-ai.spec
deploy/podman/: Containerfile  README.md  compose.yaml  podman-commands.md  suse-ai-ingest.service  suse-ai-ingest.timer  suse-ai-pod.pod  suse-ai.container  suse-ai.service  suse-ai.socket
deploy/rancher/: README.md  cluster-registration.yaml  fleet-gitrepo.yaml  helm-values-rancher.yaml  install-k3s.sh  install-rancher.sh  install-rke2.sh  rancher-cli-cheatsheet.md  rke2-config.yaml  rke2-vs-k3s-comparison.md
deploy/systemd/: README.md  suse-ai-ingest.service  suse-ai-ingest.timer  suse-ai-socket-proxy.service  suse-ai.env  suse-ai.service  suse-ai.socket  systemd-install.sh
scripts/: build_podman.sh  download_models.sh  install.sh  run_firstboot_test.sh  setup_directories.sh  test_llm_connectivity.sh
src/core/: __init__.py  config_loader.py  orchestrator.py
src/core/interfaces/: __init__.py  base_ingester.py  base_rag.py  base_ui.py
src/inference/: __init__.py  llama_client.py
src/ingestion/: crawl4ai_ingester.py  man_extractor.py  zypper_extractor.py
src/logger/: logger.py
src/os_integration/: system_context.py  version_detector.py
src/rag/: __init__.py
src/rag/vectorless/: __init__.py  backend.py  page_fetcher.py  tree_builder.py  tree_searcher.py
tests/: test_vectorless_rag.py  test_week1.py
